# orpl

./: .gitignore  CHANGELOG.md  LICENSE.md  MANIFEST.in  README.md  pyproject.toml  requirement.txt  setup.cfg
demos/: demo2_cosmic_rays.ipynb  demo5_xaxis.ipynb  demo8_visualization.ipynb
demos/.ipynb_checkpoints/: demo10_parallel_processing-checkpoint.ipynb  demo1_importing_data-checkpoint.ipynb  demo3_system_correction-checkpoint.ipynb  demo4_baseline_removal-checkpoint.ipynb  demo6_exporting_data-checkpoint.ipynb  demo8_visualization-checkpoint.ipynb  demo9_synthetic_data-checkpoint.ipynb
demos/data/.ipynb_checkpoints/: demo1_presets-checkpoint.ipynb  (+2 more)
documentation/: Installation guide - Windows.md
sample data/Andor Solis/: blue silicone 1s 25mw p5314 100 mic slit.sif  polypropylene 1s 25mw p5314 100 mic slit.sif
sample data/Andor Solis - SIF/: image tylenol 1s 25mw p5329 100 mic slit.sif  tylenol 0.1s 25mw p5314 100 mic slit.sif
sample data/Generic txt files/: NIST.csv  Nylon.txt  collagen.txt
sample data/ORAS/: bacon fat.json
sample data/ORAS - JSON/: NIST SRM 2241.json  bacon muscle - with cosmic ray.json  bacon muscle.json  tylenol.json
sample data/ORAS - SDF/: NIST.sdf  Nylon.sdf  collagen.sdf
sample data/Renishaw/: collagen_0s.wdf
sample data/Renishaw - WDF/: nylon.wdf  olive_oil.wdf  sesame_seed.wdf
src/orpl/: __init__.py  __main__.py  baseline_removal.py  bubblegif.py  calibration.py  cosmic_ray.py  datatypes.py  file_io.py  metrics.py  normalization.py  pipelines.py  plot.py  presets.json  synthetic.py
src/orpl.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+61 files in other folders)
