[metadata]
name = orplib
version = 1.0.9
author = Guillaume Sheehy
author_email = guillaume.sheehy@polymtl.ca
description = Open Raman Processing Library
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT License
url=https://github.com/mr-sheg/orpl
license_files =
    =LICENCE.md
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
package_dir =
    =src
python_requires = >=3.8
include_package_data = True
install_requires=
    matplotlib>=3.5.1
    numba>=0.55.1
    numpy>=1.21.5
    scipy>=1.7.3
    pyperclip>=1.8.2
    qtmodern>=0.2.0
    PyQt5>=5.15
    ruamel.yaml>=0.17
    sif-parser>=0.3.0
    renishawWiRE>=0.1.16

[options.packages.find]
where = src